--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,10 +9,10 @@ build:
 
 python:
    install:
-   - requirements: requirements-docs.txt
-   - requirements: requirements.txt
    - method: pip
      path: .
+     extra_requirements:
+     - docs
 
 sphinx:
   fail_on_warning: false
