--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,9 @@ jobs:
         python-version: ["3.10"]
         test-subset:
           - tests/model
-          - tests/statespace
+          - tests/statespace/test_statespace.py
+          - tests/statespace/test_kalman_filter.py
+          - tests/statespace --ignore tests/state_space/test_statespace.py --ignore tests/state_space/test_kalman_filter.py
           - tests/distributions
           - tests --ignore tests/model --ignore tests/statespace --ignore tests/distributions
       fail-fast: false
@@ -63,7 +65,9 @@ jobs:
         python-version: ["3.12"]
         test-subset:
           - tests/model
-          - tests/statespace
+          - tests/statespace/test_statespace.py
+          - tests/statespace/test_kalman_filter.py
+          - tests/statespace --ignore tests/state_space/test_statespace.py --ignore tests/state_space/test_kalman_filter.py
           - tests/distributions
           - tests --ignore tests/model --ignore tests/statespace --ignore tests/distributions
       fail-fast: false
