--- a/conda-envs/environment-test.yml
+++ b/conda-envs/environment-test.yml
@@ -1,17 +1,21 @@
-name: pymc-extras-test
+name: pymc-extras
 channels:
 - conda-forge
 - nodefaults
 dependencies:
-- pymc>=5.21
-- pytest-cov>=2.5
-- pytest>=3.0
+- python=3.12
+- pymc
+- pytensor
+- pytest-cov
+- pytest
 - dask
 - xhistogram
 - statsmodels
-- numba<=0.60.0
+- numba
+- better-optimize
+- jax
+- notebook<7
+- nutpie
 - pip
 - pip:
-  - blackjax
-  - scikit-learn
-  - better_optimize
+    - flowjax
