--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -20,8 +20,8 @@ jobs:
           python-version: "3.10"
       - name: Build the sdist and the wheel
         run: |
-          pip install hatch
-          python3 -m hatch build
+          pip install build
+          python3 -m build
       - name: Check the sdist installs and imports
         run: |
             mkdir -p test-sdist
