--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,9 +10,15 @@ on:
       - "tests/**"
       - "setup.py"
       - "pyproject.toml"
-      - "buildosx"
       - "conda-envs/**"
       - "codecov.yml"
+
+# Cancels all previous workflow runs for pull requests that have not completed.
+concurrency:
+  # The concurrency group contains the workflow name and the branch name for pull requests
+  # or the commit hash for any other events.
+  group: ${{ github.workflow }}-${{ github.event_name == 'pull_request' && github.head_ref || github.sha }}
+  cancel-in-progress: true
 
 jobs:
   ubuntu:
@@ -37,7 +43,7 @@ jobs:
         shell: bash -leo pipefail {0}
     steps:
       - uses: actions/checkout@v4
-      - uses: mamba-org/setup-micromamba@v1
+      - uses: mamba-org/setup-micromamba@v2
         with:
           environment-file: conda-envs/environment-test.yml
           create-args: >-
@@ -80,10 +86,10 @@ jobs:
         shell: cmd /C call {0}
     steps:
       - uses: actions/checkout@v4
-      - uses: mamba-org/setup-micromamba@v1
+      - uses: mamba-org/setup-micromamba@v2
         with:
-          environment-file: conda-envs/windows-environment-test.yml
-          micromamba-version: "1.5.10-0"  # Until https://github.com/mamba-org/mamba/issues/3467 is not fixed
+          environment-file: conda-envs/environment-test.yml
+          micromamba-version: "latest"
           create-args: >-
             python=${{matrix.python-version}}
           environment-name: pymc-extras-test
