configure search and use pypi release

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ dev = [
 docs = [
   "nbsphinx>=0.4.2",
   "sphinx>=4.0",
-  "pymc-sphinx-theme@git+https://github.com/pymc-devs/pymc-sphinx-theme@test_016",
+  "pymc-sphinx-theme>=0.16",
 ]
 dask_histogram = [
   "dask[complete]<2025.1.1",
