--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -17,3 +17,14 @@ python:
 sphinx:
   fail_on_warning: false
   configuration: docs/conf.py
+
+search:
+  ranking:
+    _sources/*: -10
+    _modules/*: -5
+    genindex.html: -9
+
+  ignore:
+    - 404.html
+    - search.html
+    - index.html
