--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,8 @@ dynamic = ["version"]  # specify the version in the __init__.py file
 dependencies = [
   "pymc>=5.21.1",
   "scikit-learn",
-  "better-optimize"
+  "better-optimize",
+  "pydantic>=2.0.0",
 ]
 
 [project.optional-dependencies]
