--- a/conda-envs/environment-test.yml
+++ b/conda-envs/environment-test.yml
@@ -5,7 +5,7 @@ channels:
 dependencies:
   - pymc>=5.21.1
   - scikit-learn
-  - better-optimize
+  - better-optimize>=0.1.2
   - dask<2025.1.1
   - xhistogram
   - statsmodels
