--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,9 @@ dynamic = ["version"]  # specify the version in the __init__.py file
 dependencies = [
   "pymc>=5.21.1",
   "scikit-learn",
-  "better-optimize>=0.1.2"
+  "better-optimize>=0.1.2",
+  "pydantic>=2.0.0",
+  "preliz",
 ]
 
 [project.optional-dependencies]
@@ -47,6 +49,7 @@ complete = [
 ]
 dev = [
   "pytest>=6.0",
+  "pytest-mock",
   "dask[all]<2025.1.1",
   "blackjax",
   "statsmodels",
