--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,10 +34,12 @@ keywords = [
 license = {file = "LICENSE"}
 dynamic = ["version"]  # specify the version in the __init__.py file
 dependencies = [
-  "pymc>=5.21.1",
+  "pymc>=5.24.1",
+  "pytensor>=2.31.4",
   "scikit-learn",
-  "better-optimize>=0.1.4",
+  "better-optimize>=0.1.5",
   "pydantic>=2.0.0",
+  "preliz>=0.20.0",
 ]
 
 [project.optional-dependencies]
@@ -51,7 +53,6 @@ dev = [
   "dask[all]<2025.1.1",
   "blackjax",
   "statsmodels",
-  "preliz>=0.5.0",
 ]
 docs = [
   "nbsphinx>=0.4.2",
