Ignore OpenMP warning

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,7 +105,10 @@ filterwarnings =[
     'ignore:os\.fork\(\) was called\.:RuntimeWarning',
 
     # Preliz needs to update for pytensor > 2.35
-   'ignore:.*`pytensor\.graph\.basic\.ancestors`.*`pytensor\.graph\.traversal\.ancestors`.*:FutureWarning:^preliz(\.|$)'
+   'ignore:.*`pytensor\.graph\.basic\.ancestors`.*`pytensor\.graph\.traversal\.ancestors`.*:FutureWarning:^preliz(\.|$)',
+
+    # OpenMP library warning on windows CI
+  'ignore::RuntimeWarning:threadpoolctl'
 ]
 
 [tool.coverage.report]
