Update to support the latest blackjax

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ dev = [
   "pytest>=6.0",
   "pytest-mock",
   "dask[all]<2025.1.1",
-  "blackjax",
+  "blackjax>=0.12",
   "statsmodels",
 ]
 docs = [
