--- a/conda-envs/environment-test.yml
+++ b/conda-envs/environment-test.yml
@@ -3,8 +3,8 @@ channels:
 - conda-forge
 - nodefaults
 dependencies:
-  - pymc>=5.26.1
-  - pytensor>=2.35.1
+  - pymc>=5.27.0
+  - pytensor>=2.36.1
   - scikit-learn
   - better-optimize>=0.1.5
   - dask<2025.1.1
@@ -18,4 +18,4 @@ dependencies:
   - pip
   - pip:
       - jax
-      - blackjax
+      - blackjax>=0.12
