Ignore general numba warnings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,7 +111,11 @@ filterwarnings =[
     'ignore::RuntimeWarning:threadpoolctl',
 
     # ArviZ warning related to 1.0 release
-    'ignore:\nArviZ is undergoing a major refactor.*:FutureWarning'
+    'ignore:\nArviZ is undergoing a major refactor.*:FutureWarning',
+
+    # Numba warnings that are filtered by PyTensor but re-introduced by pytest
+    'ignore::numba.core.errors.NumbaPerformanceWarning',
+    'ignore:.*Cannot cache compiled function.*:numba.core.errors.NumbaWarning',
 ]
 
 [tool.coverage.report]
